--- a/res/values/ppui_strings.xml
+++ b/res/values/ppui_strings.xml
@@ -15,4 +15,10 @@
     <string name="ppui_version">"PixelPlusUI version"</string>
     <string name="build_date">"Build Time"</string>
 
+    <!-- SELinux Status -->
+    <string name="selinux_status">SELinux status</string>
+    <string name="selinux_status_disabled">Disabled</string>
+    <string name="selinux_status_permissive">Permissive</string>
+    <string name="selinux_status_enforcing">Enforcing</string>
+
 </resources>
