PanelLayout: use darker color for dark mode background && get rid of dividers
Signed-off-by: 00day0 <therandomuser11@gmail.com>
Signed-off-by: ugly-kid-af <dwarmachine24@gmail.com>

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -151,4 +151,7 @@
 
     <!-- Config Center -->
     <color name="homepage_config_center_background">#4e66ed</color>
+
+    <color name="settings_panel_background_color">@android:color/white</color>
+
 </resources>
