Settings: Lottie Animations
* preview: https://twitter.com/Bliss_ROMs/status/1280372798087520257
* source for animations: https://lottiefiles.com/

Change-Id: Ieae9420ec7e391b0277e97a2b184e3d10eb29255
Signed-off-by: ugly-kid-af <dwarmachine24@gmail.com>

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -141,4 +141,9 @@ Notifications may be delayed for these apps."</string>
     <string name="double_tap_title">Double tap</string>
     <string name="doze_double_tap_title">Double tap to check phone</string>
     <string name="doze_double_tap_summary">Pulse notifications by a double tap</string>
+
+    <string name="apps_category">Apps</string>
+    <string name="volume_key_category_title">Volume Shortcut</string>
+    <string name="connected_devices_category_title">Connected Devices</string>
+
 </resources>
