--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -22,6 +22,12 @@
     settings:keywords="@string/keywords_sounds"
     settings:initialExpandedChildrenCount="9">
 
+   <Preference
+        android:key="sound_animation"
+        android:layout="@layout/sound_animation" 
+        android:order="-999"/>
+
+
     <!-- Remote volume -->
     <com.android.settings.notification.RemoteVolumeSeekBarPreference
         android:key="remote_volume"
