Settings: Lottie Animations
* preview: https://twitter.com/Bliss_ROMs/status/1280372798087520257
* source for animations: https://lottiefiles.com/

Change-Id: Ieae9420ec7e391b0277e97a2b184e3d10eb29255
Signed-off-by: ugly-kid-af <dwarmachine24@gmail.com>

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -143,5 +143,9 @@ Notifications may be delayed for these apps."</string>
     <!-- Notch: Full screen apps -->
     <string name="display_cutout_force_fullscreen_title">Full screen apps</string>
     <string name="display_cutout_force_fullscreen_summary">Force apps to ignore notch space</string>
+    
+    <string name="apps_category">Apps</string>
+    <string name="volume_key_category_title">Volume Shortcut</string>
+    <string name="connected_devices_category_title">Connected Devices</string>
 
 </resources>
