--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -115,9 +115,9 @@
     <dimen name="search_bar_margin">8dp</dimen>
 
     <dimen name="search_bar_height">48dp</dimen>
-    <dimen name="search_bar_corner_radius">8dp</dimen>
+    <dimen name="search_bar_corner_radius">@*android:dimen/config_dialogCornerRadius</dimen>
     <dimen name="search_bar_text_size">16dp</dimen>
-    <dimen name="search_bar_card_elevation">3dp</dimen>
+    <dimen name="search_bar_card_elevation">1dp</dimen>
     <dimen name="search_bar_content_inset">64dp</dimen>
     <dimen name="search_bar_avatar_end_padding">16dp</dimen>
     <!-- 32dp (avatar size) + 16 dp (search_bar_avatar_end_padding) -->
@@ -134,7 +134,7 @@
     <dimen name="wifi_assistant_image_top">32dp</dimen>
     <dimen name="wifi_assistant_image_start">24dp</dimen>
     <!-- appbar height is equal search bar height (48dp) plus search bar top and bottom margin  -->
-    <dimen name="app_bar_height">72dp</dimen>
+    <dimen name="app_bar_height">80dp</dimen>
 
     <!-- CryptKeeper top margin for password/pin screen -->
     <dimen name="crypt_keeper_password_top_margin">88dip</dimen>
