--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -429,7 +429,7 @@
 
     <style name="SearchBarStyle">
         <item name="android:layout_margin">@dimen/search_bar_margin</item>
-        <item name="cardCornerRadius">@*android:dimen/config_dialogCornerRadius</item>
+        <item name="cardCornerRadius">18dp</item>
         <item name="enforceMaterialTheme">true</item>
         <item name="cardElevation">3dp</item>
         <item name="shapeAppearance">@null</item>
