--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -21,6 +21,20 @@
     android:title="@string/firmware_version"
     settings:keywords="@string/keywords_android_version">
 
+    <!-- PPUI logo -->
+    <com.android.settingslib.widget.LayoutPreference
+        android:key="ppui_logo"
+        android:layout="@layout/ppui_logo"
+        android:selectable="false"/>
+
+    <!-- PPUI version -->
+    <Preference
+        android:key="ppui_version"
+        android:title="@string/ppui_version"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.PPUIVersionDetailPreferenceController"/>
+
     <!-- Android version -->
     <Preference
         android:key="os_firmware_version"
@@ -62,6 +76,14 @@
         android:selectable="false"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.KernelVersionPreferenceController"/>
+
+    <!-- Build Time -->
+    <Preference
+        android:key="os_build_date"
+        android:title="@string/build_date"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.PPUIBuildDatePreferenceController"/>
 
     <!-- Build -->
     <Preference
